HelloUltraviolet/Fixtures/RejectedSource/Patterns/RangePatternNonConst/Expected.uv
//! Expected diagnostic metadata for the RangePatternNonConst rejected-source specimen.

expectedDiagnostic("", "rule.17.RangePattern-NonConst")
